@@ -8,6 +8,9 @@
 	* src/win/wgraph.c:  Fix initialization of the graph window struct when
 	switching from standalone to docked mode and a previous window was open.
 
+	config/mingw/Makefile:  New variable CWFLAGS for warning flags to be
+	put last in CFLAGS in order to overwrite e.g. -Wall.
+
 2017-02-14  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.c src/axis.h src/graphics.c src/save.c src/set.c src/show.c
